crear produtos, autentificacion y modelos

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id"
-        content="635174581757-7651th19mjenk8qhr5cuti45ke5frvqs.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="635174581757-7651th19mjenk8qhr5cuti45ke5frvqs.apps.googleusercontent.com">
     <title>Google sign-In</title>
 </head>
 
@@ -30,9 +29,6 @@
             console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
         }
     </script>
-
-
-
 </body>
 
 </html>
